plugins {
    id 'java'
}

allprojects {
    group = 'SAML2WEBSSOTest'
    version = '2.0.0'
}

subprojects {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }
}
